login-screen-complete

--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,7 +1,7 @@
 @import "../../global.css";
 .login-container{
   min-height: 100vh;
-  background-color:  #f9fafb;
+  background-color:  white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,3 +64,42 @@
     border-radius: 0.375rem;
     margin-bottom: 3px;
 }
+
+.checkbox-container{
+    display: flex;
+    align-items: center;
+    min-height: 48px;
+}
+
+.checkbox{
+    border-radius: 1px;
+    margin-right: 0.5rem;
+    color: #CFDBE8;
+    height: clamp(1rem, 3vw, 1rem);
+    width: clamp(1rem, 3vw, 1.125rem);
+    margin-left: 0.4rem;
+    border-color: #CFDBE8;
+    border: 2px solid #CFDBE8 ;
+    
+}
+
+.checkbox-label{
+    cursor: pointer;
+    line-height: 1.4rem;
+}
+
+
+.forgot-link{
+    color: var(--dark-purple);
+    cursor: pointer;
+}
+
+.login-button{
+    width: 100%;
+    background-color: var(--dark-purple);
+    border-radius: 5px;
+    margin-top: 1rem;
+    height: 45px;
+    color: #f9fafb;
+}
+
