--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -130,12 +130,27 @@
    padding-left: 1rem;
 }
 
+.alert-content{
+  display: flex;
+  flex-direction: column;
+}
 .alert{
   padding-block: 0.5rem;
+  display: flex;
+  gap: 0.7rem;
 }
-
 
 .alert-title{
   font-size: 16px;
   font-weight: 500;
+}
+
+.alert-icon{
+  width:48px;
+  height: 48px;
+  background-color: #E8EDF5 ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
 }
